static/kidical-mass/css/style.css
@font-face{
  font-family: cooper;
  src: url("../fonts/COOPBL.ttf");
}
*, *::before, *::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
html, body {
  height: 100%;
  scroll-behavior: smooth;
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  background-color: #FFFBFE;
}
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
input, button, textarea, select {
  font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}
p{
  /*margin-bottom: 2em;*/
  margin-top:0.5em;
  margin-bottom:0.5em;
}
#root, #__next {
  isolation: isolate;
}
html {
  font-family: 'Inter';
}
.main-single,main {
  max-width: 1000px;
  padding: 30px;
  margin: 0 auto;
}
.main-single{
  margin-top:200px;
}
h1, h2 {
  margin-top: 0.5em;
  margin-bottom: 0.5em;
  font-family: cooper;
  letter-spacing: 2px;
}
h1 {
  color: #205493;
}
h2 {
  color: #e31c3d;
}
.canceled-ride-notice{
  background-color: #e31c3d;
  padding: 2em;
  margin-bottom:2em;
  text-align:center;
}
.canceled-ride-notice>h1{
  color: white;
  font-family: 'Inter';
}
.upcoming-rides,.past-rides {
  display: flex;
  flex-wrap: wrap;
}
body > main > a,body > main > div.upcoming-rides > a,body > main > div.past-rides > a, body>main>div>a{
  text-decoration: none;
}

.card,.ride {
  background-color: #205493;
  color: white;
  border-radius: 0.25em;
  margin-right: 0.5em;
  margin-bottom: 0.5em;
  padding: 0.5em;
  width: 300px;
  display: none;
  box-shadow: 1px 1px 5px grey;
}
.card{
  display: block;
  background-color: #e31c3d;
}
.ride:hover {
  background-color: #2767b5;
  color: white;
  box-shadow: 2px 2px 10px grey;
}
.card:hover{
  background-color: #f15e76;
  color: white;
  box-shadow: 2px 2px 10px grey;
}
.box-link {
  background-color: #205493;
  color: white;
  border-radius: 0.25em;
  margin-right: 0.5em;
  margin-bottom: 0.5em;
  padding: 0.5em;
  width: 300px;
  box-shadow: 1px 1px 5px grey;
}
.box-link:hover {
  background-color: #2767b5;
  color: white;
  box-shadow: 2px 2px 10px grey;
}
#header{
  display: flex;
}
#header_img{
  margin-top:200px;
  width:100%;
}
.footer > h1{
  display: flex;
  margin-top:0px;
  padding:30px;
  color: white;
}
#nav_bar{
  display:inline-block;
  position: fixed;
  width:100%;
  height: 200px;
  padding: 10px;
  padding-left:10px;
  background-color: #FFFBFEdd;
  background: linear-gradient(to bottom, #FFFBFEff,#FFFBFEcc);
  z-index:2;
}
#logo{
  height: 100%;
  display:inline;
}
#logo > img{
  display: inline;
  height:100%
}
#tray{
  display:block;
  float:right;
  width:490px;
  text-align:right;
}
#menu{
  height:100%;
  display:inline-block;
  font-family: cooper;
  font-size: 2.0em;
}
#socials{
  display:inline-block;
  float:right;
}
#mobileMenuButton{
  display:none;
}
#menu>ul,#menu>li{
  display:inline;
  padding: 0px;
}
#menu>ul>li{
  display: inline-block;
  padding:0.1em;
  padding-right:1.0em;
}
#socials>a>i{
  padding:10px;
  font-size: 2em;
  color:#205493;
  float: right;
}
#socials>a>i>svg{
  padding:0px;
  display: inline-block;
}
#socials>a>i>svg:hover{
  filter: drop-shadow(2px 2px 10px grey);
}
#menu>ul>li:hover,#socials>a>i:hover{
  text-shadow: 2px 2px 10px grey;
}
#menu>ul>li>a,#menu>ul>li>a:visited{
  text-decoration:none;
  color: #205493;
}
#heroImage{
  width:100%;
}
#downButton{
  border:none;
  background-color:#000000aa;
  color:white;
  font-size:2em;
  position:absolute;
  left: 50%;
  bottom:0;
  
  border-radius:50%;
  width:2.0em;
  height:2.0em;
  display: block;
  margin-bottom:0.5em;
  z-index:1;
}
#downButton:hover{
  box-shadow: 1px 1px 5px 2.5px black;
}
.footer{
  background-image: url("../img/kidical-mass-bikes-transparent_footer.svg");
  height: 200px;
  background-repeat: repeat-x;
}
#no-past-rides-message{
  display:none;
}
h2{
   scroll-margin-top: 120px;
}
/*with tray width of 445, max-width of 768 is good.*/
@media only screen and (max-width: 813px){
  main {
    margin-top:0px;
  }
  .main-single{
    margin-top:0px;
  }
  #nav_bar{
    height: auto;
    text-align: center;
    position:static;
    min-width:320px;
  }
  #nav_bar{
    display:block;
  }
  #logo{
    max-height:180px;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
  #logo>img{
    max-height:180px;
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
  #tray{
    float:none;
    padding-top: 0px;
    white-space:nowrap;
    display:inline-block;
    text-align:center;
    width:100%;
  }
  #socials>a>i{
    float: none;
  }
  #header_img{
    margin-top:0px;
    clear:both;
    min-width:320px;
  }
  #mobileMenuButton{
    display:inline-block;
    float: none;
  }
  #socials,#menu{
    display:block;
    float: none;
  }
  #menu{
    display:none;
  }
  #menu>ul{
    display:block;
  }
  #menu>ul>li{
    display: block;
  }
  h2{
   scroll-margin-top: 0px;
}
}
@media only screen and (max-width: 475px){
  
  #downButton{
    font-size:1.5em;
    
    width:2.0em;
    height:2.0em;
    margin-bottom:0.25em;
  }
}

